1999-03-30  Owen Taylor  <otaylor@redhat.com>

	* gnome-config.c (is_loaded): Fix logic when a
	config file is changed under us so it at least
	doesn't segfault. Without locking I wouldn't
	bet anything about correctness.

1999-03-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): free
	uargv[0] using free(), it's allocated in gnome_util_user_shell()
	using strdup().

1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-fileconvert.c (gnome_file_convert): Make const correct.
	
Tue Mar 23 19:28:41 1999  George Lebl  <jirka@5z.com>

	* gnome-score.c,gnome-exec.c,gnome-entry.c: stuff that is allocated
	  with g_malloc has to be free'd with g_free and vice versa

Sun Mar 21 00:53:26 1999  George Lebl  <jirka@5z.com>

	* gnome-fileconvert.c: include string.h

Sat Mar 20 00:52:41 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: doh! the last segfault fix, wasn't a segfault fix,
	  the code was correct before, however I fixed a couple of memleaks
	  anyway

Fri Mar 19 12:53:11 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: when we want to reread the file when it was changed
	  on disk we must wipe our current memory of it, dropping files
	  caused a possible segfault and current wasn't reset when we
	  dropped all.

	* parse-path.cP: when we set pp->file to the error string, don't free
	  it when releasing the path

1999-03-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* Makefile.am (libgnome_la_LDFLAGS): Updated library version number.

1999-03-18  James Henstridge  <james@daa.com.au>

	* Makefile.am (gnome_moz_remote_LDADD): removed -lXmu and -lXt.  I
	don't know why it was linking with Xt before.

	* gnome-moz-remote.c: made a number of changes so that when local URLs
	(ie. file: ones) are given on the command line only local copies of
	mozilla are used to display them.  Also fixed up the client window
	search a bit.  It now uses the GNOME WM hints if available, otherwise